	* value: added replace_follow parameter to specify automatic
	  replacement based on a hash somewhere in the configuration
	   tree

2011-03-01 Dominique Dumont  <domi.dumont@free.fr> 1.235
    
    * Application changes:
        * dpkg control source model: Encourage Standard-Version 3.9.1
        * dpkg control dependency: only versions older than old-stable (i.e. 
          not found on madison) will trigger a warning
        * dpkg copyright: Handle license in header (Closes Debian #614776)
        * Dpkg copyright backend: skip empty copyright lines
        
    * Framework changes:
        * WarpedThing: Can warp based on the location in a tree. For instance to make
        an element mandatory in one place and not in another. Used by Debian copyright model
        * Value: mandatory values also require non-empty strings
        * config-edit: Force to load all sub-models (i.e. control, copyright) of
        a top-model (err.. dpkg) when run with option -ui none

    TODO:
    - make warp skip warp master if they cannot be found with !SomeClass
    - Auto test of synopsises

2011-02-21 Dominique Dumont  <domi.dumont@free.fr> 1.234
    
    * factor out comment extraction: code that retrieve comments and tie it to 
      actual config data is generic. Now this is handled by 
      C::M::B::Any::associates_comments_with_data
    * factored out comment writing in C::M::B::Any::write_global_comments
      and C::M::B::Any::write_data_and_comments
    * Fix bad handling of leaf type Ini backend (Thanks Krzysztof for the notice)
    

2011-02-11 Dominique Dumont  <domi.dumont@free.fr> 1.233
    
    * Application changes:
        * dpkg control source model: Added DM-Upload-Allowed and all Vcs-* tags defined 
        in Debian reference guide (Thanks Peter Pentchev for the patch)
          (Fix RT 65575)
        
    * Framework changes:
        * Backend Ini file: Fixed comment handling