@@ -15,6 +15,9 @@ use AptPkg::Config '$_config';
 use AptPkg::System '$_system';
 use AptPkg::Version;
 
+use vars qw/$test_filter/ ;
+$test_filter = ''; # reserved for tests
+
 my $logger = get_logger("Tree::Element::Value::Dependency") ;
 
 # initialise the global config object with the default values
@@ -87,20 +90,25 @@ sub dep_parser {
     return $parser ;
 }
 
+# this method may recurse bad:
+# check_dep -> meta filter -> control maintainer -> create control class
+# autoread started -> read all fileds -> read dependency -> check_dep ...
+
 sub check_value {
     my $self = shift ;
     my %args = @_ > 1 ? @_ : (value => $_[0]) ;
     my $value = $args{value} ;
     my $quiet = $args{quiet} || 0 ;
     my $silent = $args{silent} || 0 ;
-
     
     my @error = $self->SUPER::check_value(%args) ;
     
-    $logger->debug("check_value '$value'");
-    my $prd_check = dep_parser->check_depend ( $value,1,$self) ; 
+    if (defined $value) {
+        $logger->debug("check_value '$value'");
+        my $prd_check = dep_parser->check_depend ( $value,1,$self) ; 
     
-    push @error,"dependency '$value' does not match grammar" unless defined $prd_check ;
+        push @error,"dependency '$value' does not match grammar" unless defined $prd_check ;
+    }
 
     # value is one dependency, something like "perl ( >= 1.508 )"
     # or exim | mail-transport-agent or gnumach-dev [hurd-i386]
@@ -113,9 +121,18 @@ sub check_value {
     return wantarray ? @error : scalar @error ? 0 : 1 ;
 }
 
+my @deb_releases = qw/etch lenny squeeze wheezy/;
+
+my %deb_release_h ;
+while (@deb_releases) {
+    my $k = pop @deb_releases ;
+    my $regexp = join('|',@deb_releases,$k);
+    $deb_release_h{$k} = qr/$regexp/;
+}
+
 sub check_dep {
     my ($self,$pkg,$oper,$vers) = @_ ;
-    $logger->debug("parser calls check_dep with $pkg $oper $vers");
+    $logger->debug("check_dep: called with $pkg $oper $vers");
     return 1 unless defined $oper and $oper =~ />/ ;
 
     # special case to keep lintian happy
@@ -125,11 +142,23 @@ sub check_dep {
     my @dist_version = split m/ /,  get_available_version($pkg) ;
     # print "\t'$pkg' => '@dist_version',\n";
 
+    my $filter = $test_filter || $self->grab_value(
+        step => '!Debian::Dpkg meta dependency-filter',
+        mode => 'loose',
+    ) || '';
+    $logger->debug("check_dep: using filter $filter") if defined $filter;
+    my $regexp = $deb_release_h{$filter} ;
+
+    $logger->debug("check_dep: using regexp $regexp") if defined $regexp;
+    
     my @list ;
     my $has_older = 0;
     while (@dist_version) {
         my ($d,$v) = splice @dist_version,0,2 ;
-        push @list, "$d -> $v;";
+ 
+        next if defined $regexp and $d =~ $regexp ;
+
+        push @list, "$d -> $v;" ;
         
         if ($vs->compare($vers,$v) > 0 ) {
             $has_older = 1 ;
